Fixed scaling issues on mobile

--- a/src/App/App.css
+++ b/src/App/App.css
@@ -28,8 +28,7 @@ html, body {
   background-repeat: no-repeat;
   color: whitesmoke;
   background-size: cover;
-  /* min-height: 100vh; 
-  min-width: 100vw; */
+  
 }
 
 @keyframes fade-in {
