--- a/src/Footer/Footer.module.css
+++ b/src/Footer/Footer.module.css
@@ -5,15 +5,15 @@
   width: 100%;
   color: whitesmoke;
   font-size: 1em;
-  margin-top: 20%;
+  margin-top: 10%;
 }
 
 .footer p {
-  padding: 0 0 0 20px;
+  padding: 0 0 20px 20px;
 }
 
 @media only screen and (max-width: 400px) {
   .footer p {
-    padding: 0 0 0 10px;
+    padding: 0 0 10px 10px;
   }
 }
