--- a/src/Navbar/Navbar.module.css
+++ b/src/Navbar/Navbar.module.css
@@ -4,17 +4,17 @@
   top: 0;
   display: flex;
   flex-flow: row wrap;
-  padding: 20px 0;
+  padding: 40px 0;
   z-index: 3;
   backdrop-filter: blur(10px);
 }
 
 .buttonBar {
   width: 100%;
-  padding: 20px 0;
   display: flex;
+  flex-flow: row wrap;
   justify-content: space-around;
-  align-items: flex-start;
+  align-items: center;
 }
 
 .overlayContainer {
@@ -63,45 +63,37 @@
   transition: 0s ease-out 0s all;
 }
 
-@media only screen and (max-width: 900px) {
+@media only screen and (max-width: 700px) {
   .buttonBar {
-    position: sticky;
-    top: 0;
+    flex-flow: column wrap;
+    justify-content: space-between;
+    align-items: center;
+    max-height: 140px;
   }
+
+  .navbar {
+    padding: 20px 0;
+  }
+
+  .navbarButton {
+    /* transform: scale(0.9); */
+    margin: 10px 0;
+  }
+
+}
+
+@media only screen and (max-width: 400px) {
+  .navbarButton,
   .buttonFront {
-    width: 120px;
+    width: 135px;
     font-size: 1rem;
   }
 }
 
-@media only screen and (max-width: 700px) {
-  .buttonBar {
-    display: flex;
-    flex-flow: column wrap;
-    justify-content: space-between;
-    align-items: center;
-    height: 110px;
-  }
-
-  .navbarButton {
-    margin: 5px 10px;
-  }
-  
-  .buttonBar {
-    padding: 10px 0;
-    margin-bottom: 0;
-  }
-}
-
-@media only screen and (max-width: 400px) {
+@media only screen and (max-width: 315px) {
+  .navbarButton,
   .buttonFront {
-    padding: 10px 15px;
-    width: 100px;
-  }
-}
-@media only screen and (max-width: 300px) {
-  .buttonFront {
-    width: 80px;
+    width: 110px;
     font-size: 0.9rem;
   }
 }
